nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet:
            path: /
            port: 443
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 443
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
      volumes:
      - name: config-volume
        configMap:
          name: nginx-tcp-relay-config
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: nginx-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    #nginx.ingress.kubernetes.io/proxy-ssl-name: "https://frankfurt.micheal.ch"
    #nginx.ingress.kubernetes.io/upstream-vhost: "https://frankfurt.micheal.ch"
  name: test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: frankfurt.micheal.ch
    http:
      paths:
      - backend:
          service:
            name: test
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - frankfurt.micheal.ch
      secretName: frankfurt.micheal.ch
