socat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socat-test
  namespace: default
  labels:
    app: socat-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socat-test
  template:
    metadata:
      labels:
        app: socat-test
    spec:
      hostAliases:
      - ip: "173.44.139.215"
        hostnames:
          - "frankfurt.micheal.ch"
      containers:
      - name: socat
        image: alpine/socat
        ports:
        - containerPort: 443
        args:
        - tcp-listen:443,fork,reuseaddr
        - tcp-connect:173.44.139.215:443
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: socat-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    #nginx.ingress.kubernetes.io/proxy-ssl-name: "https://frankfurt.micheal.ch"
    #nginx.ingress.kubernetes.io/upstream-vhost: "https://frankfurt.micheal.ch"
  name: test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: frankfurt.micheal.ch
    http:
      paths:
      - backend:
          service:
            name: test
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - frankfurt.micheal.ch
      secretName: frankfurt.micheal.ch
