traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-tcp-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-tcp-lb
  template:
    metadata:
      labels:
        app: traefik-tcp-lb
    spec:
      containers:
        - name: traefik
          image: traefik:v2.5
          args:
            - "--log.level=DEBUG"
            - "--api.insecure=true"
            - "--providers.file.directory=/etc/traefik/dynamic"
            - "--entrypoints.websecure.address=:443"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/traefik/dynamic
          readinessProbe:
            tcpSocket:
              port: 443
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 443
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
      volumes:
      - name: config-volume
        configMap:
          name: traefik-tcp-config
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: traefik-tcp-lb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    #nginx.ingress.kubernetes.io/proxy-ssl-name: "https://frankfurt.micheal.ch"
    #nginx.ingress.kubernetes.io/upstream-vhost: "https://frankfurt.micheal.ch"
  name: test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: frankfurt.micheal.ch
    http:
      paths:
      - backend:
          service:
            name: test
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - frankfurt.micheal.ch
      secretName: frankfurt.micheal.ch
